...
    <View
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#33B5E5" />

    <com.antsapps.triples.cardsview.VerticalCardsView
      android:id="@+id/cards_view"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingRight="5dp"
          android:textStyle="bold"
          android:text="Arcade" />

        <TextView
          android:id="@+id/shape_explanation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Find as many triples as you can in 60 seconds."/>
...
