<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/new_game"
      android:icon="@drawable/ic_add"
      app:showAsAction="ifRoom|withText"
      android:title="@string/new_game" />
  <item
      android:id="@+id/help"
      android:icon="@drawable/ic_help"
      app:showAsAction="ifRoom|withText"
      android:title="@string/help" />
  <item
      android:id="@+id/settings"
      app:showAsAction="never"
      android:title="@string/settings" />

</menu>